--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "hus-analyzer",
-  "private": true,
-  "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
-  },
-  "devDependencies": {
-    "prettier": "^3.6.2",
-    "turbo": "^2.5.8",
-    "typescript": "5.9.2"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "packageManager": "bun@1.3.1",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
+	"name": "hus-analyzer",
+	"private": true,
+	"scripts": {
+		"build": "turbo run build",
+		"dev": "turbo run dev",
+		"check-types": "turbo run check-types",
+		"format-and-lint": "biome check .",
+		"format-and-lint:fix": "biome check . --write",
+		"syncpackages": "sherif"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.3",
+		"sherif": "^1.8.0",
+		"turbo": "^2.5.8",
+		"typescript": "5.9.2"
+	},
+	"engines": {
+		"node": ">=18"
+	},
+	"packageManager": "bun@1.3.1",
+	"workspaces": [
+		"apps/*",
+		"packages/*"
+	]
 }
