--- a/lefthook.yml
+++ b/lefthook.yml
@@ -41,8 +41,15 @@
 #     - script: "hello.go"
 #       runner: go run
 pre-commit:
+  parallel: true
   commands:
     check:
       glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
-      run: npx @biomejs/biome check --write --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
+      run: bunx @biomejs/biome check --write --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
       stage_fixed: true
+
+# Validate commit messages
+commit-msg:
+  commands:
+    "lint commit message":
+      run: bun run commitlint --edit {1}
