--- a/lefthook.yml
+++ b/lefthook.yml
@@ -47,6 +47,17 @@ pre-commit:
       glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
       run: bunx @biomejs/biome check --write --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
       stage_fixed: true
+    ls-lint:
+      glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc,md,mdx,yml,yaml}"
+      run: bun ls-lint
+      stage_fixed: true
+    sherif:
+      glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc,md,mdx,yml,yaml}"
+      run: bun sherif
+      stage_fixed: true
+    check-types:
+      glob: "*.{ts,tsx,d.cts,d.mts}"
+      run: bun check-types
 
 # Validate commit messages
 commit-msg:
