--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,19 +1,18 @@
 {
-	"name": "api",
-	"version": "1.0.0",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "mastra dev",
-		"build": "mastra build",
-		"start": "mastra start"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"description": "",
+	"name": "my-first-agent",
+	"module": "index.ts",
 	"type": "module",
-	"engines": {
-		"node": ">=20.9.0"
+	"private": true,
+	"devDependencies": {
+		"@types/bun": "latest",
+		"@types/node": "^24.9.2",
+		"mastra": "^0.17.7"
+	},
+	"peerDependencies": {
+		"typescript": "^5.9.3"
+	},
+	"dependencies": {
+		"@mastra/core": "^0.23.3",
+		"zod": "^4"
 	}
 }
