--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,16 +3,22 @@
 	"module": "index.ts",
 	"type": "module",
 	"private": true,
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "mastra dev",
+		"build": "mastra build"
+	},
 	"devDependencies": {
 		"@types/bun": "latest",
-		"@types/node": "^24.9.2",
-		"mastra": "^0.17.7"
+		"@types/node": "^24.10.0",
+		"mastra": "^0.18.0"
 	},
 	"peerDependencies": {
 		"typescript": "^5.9.3"
 	},
 	"dependencies": {
-		"@mastra/core": "^0.23.3",
+		"@mastra/core": "^0.24.0",
 		"zod": "^4"
-	}
+	},
+	"packageManager": "bun@1.3.1"
 }
