--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -2,8 +2,8 @@
 	"compilerOptions": {
 		// Environment setup & latest features
 		"lib": ["ESNext"],
-		"target": "ESNext",
-		"module": "Preserve",
+		"target": "ES2022",
+		"module": "ES2022",
 		"moduleDetection": "force",
 		"jsx": "react-jsx",
 		"allowJs": true,
@@ -13,6 +13,8 @@
 		"allowImportingTsExtensions": true,
 		"verbatimModuleSyntax": true,
 		"noEmit": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
 
 		// Best practices
 		"strict": true,
@@ -24,6 +26,8 @@
 		// Some stricter flags (disabled by default)
 		"noUnusedLocals": false,
 		"noUnusedParameters": false,
-		"noPropertyAccessFromIndexSignature": false
-	}
+		"noPropertyAccessFromIndexSignature": false,
+		"outDir": "dist"
+	},
+	"include": ["src/**/*"]
 }
