feat: add global styles and layout for dark mode support
- Introduced global CSS variables for light and dark themes in globals.css.
- Created a RootLayout component in layout.tsx to apply global styles and fonts.
- Developed page.module.css for structured layout and responsive design.
- Implemented ThemeImage component in page.tsx to handle light and dark images.
- Enhanced button styles and added hover effects for better user interaction.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,6 +3,17 @@
 	"version": "0.1.0",
 	"type": "module",
 	"private": true,
+	"imports": {
+		"#*": [
+			"./src/*.ts",
+			"./src/*.tsx",
+			"./src/*.d.ts",
+			"./src/*/index.ts",
+			"./src/*/index.tsx",
+			"./src/index.d.ts",
+			"./src/*"
+		]
+	},
 	"scripts": {
 		"dev": "next dev --port 4000",
 		"build": "next build",
@@ -22,6 +33,7 @@
 		"@types/node": "^24.10.0",
 		"@types/react": "19.2.0",
 		"@types/react-dom": "19.2.0",
+		"babel-plugin-react-compiler": "^1.0.0",
 		"eslint": "^9.38.0",
 		"typescript": "5.9.2"
 	}
