--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,24 +1,38 @@
 {
-	"name": "mastra-back",
-	"module": "index.ts",
-	"type": "module",
-	"private": true,
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "mastra dev",
-		"build": "mastra build"
-	},
-	"devDependencies": {
-		"@types/bun": "latest",
-		"@types/node": "^24.10.0",
-		"mastra": "^0.18.0"
-	},
-	"peerDependencies": {
-		"typescript": "^5.9.3"
-	},
-	"dependencies": {
-		"@mastra/core": "^0.24.0",
-		"zod": "^4"
-	},
-	"packageManager": "bun@1.3.1"
+  "name": "mastra-back",
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "mastra dev",
+    "build": "mastra build"
+  },
+  "imports": {
+    "#*": [
+      "./src/*.ts",
+      "./src/*.tsx",
+      "./src/*.d.ts",
+      "./src/*/index.ts",
+      "./src/*/index.tsx",
+      "./src/index.d.ts",
+      "./src/*"
+    ]
+  },
+  "devDependencies": {
+    "@types/bun": "latest",
+    "@types/node": "^24.10.0",
+    "mastra": "^0.18.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@mastra/core": "^0.24.0",
+    "@mastra/loggers": "^0.10.19",
+    "@mastra/memory": "^0.15.11",
+    "@mastra/pg": "^0.17.8",
+    "ollama-ai-provider-v2": "^1.5.2",
+    "zod": "^4"
+  },
+  "packageManager": "bun@1.3.1"
 }
