--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,13 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    "./*": "./src/*.tsx"
+    "./*": "./src/*.tsx",
+    "./styles.css": "./dist/styles.css",
+    "./Colors": "./src/Colors.tsx",
+    "./heroui": "./src/heroui.ts"
   },
   "scripts": {
     "generate:component": "turbo gen react-component",
     "check-types": "tsc --noEmit",
     "format-and-lint": "biome check .",
-    "format-and-lint:fix": "biome check . --write"
+    "format-and-lint:fix": "biome check . --write",
+    "build": "tailwindcss -i ./global.css -o ./dist/styles.css",
+    "dev": "tailwindcss -i ./global.css -o ./dist/styles.css --watch"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
@@ -20,7 +25,13 @@
     "typescript": "5.9.2"
   },
   "dependencies": {
+    "@heroui/react": "^3.0.0-beta.1",
+    "@heroui/styles": "^3.0.0-beta.1",
+    "@tailwindcss/cli": "^4.1.17",
+    "@tailwindcss/postcss": "^4.1.17",
+    "postcss": "^8.5.6",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.17"
   }
 }
