--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,6 +21,7 @@
     "@mastra/memory": "^0.15.11",
     "@mastra/pg": "^0.17.8",
     "ollama-ai-provider-v2": "^1.5.2",
+    "youtube-caption-extractor": "^1.9.1",
     "zod": "^4"
   },
   "packageManager": "bun@1.3.1"
