--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@mastra/client-js": "^0.16.9",
     "@repo/ui": "*",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "next": "^16.0.0",
     "nuqs": "^2.7.2",
     "react": "^19.2.0",
