feat(shared-types): add workflow validation schemas and helpers for YouTube processing
- Introduced new schemas and types for YouTube workflows, including input and output structures.
- Implemented workflow validation helpers to ensure type-safe processing of YouTube video data.
- Created a new package for shared types with TypeScript configuration.
- Added Zod schemas for validating workflow states and step results.
- Removed ESLint from UI package dependencies.

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -28,7 +28,16 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
-    "outDir": "dist"
+    "outDir": "dist",
+
+    "paths": {
+      "@repo/shared-types/*": ["../../packages/shared-types/src/*"]
+    }
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "references": [
+    {
+      "path": "../../packages/shared-types"
+    }
+  ]
 }
