--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,8 @@
     "@mastra/loggers": "^0.10.19",
     "@mastra/memory": "^0.15.11",
     "@mastra/pg": "^0.17.8",
+    "@repo/shared-types": "*",
+    "@toon-format/toon": "^0.8.0",
     "ollama-ai-provider-v2": "^1.5.2",
     "youtube-caption-extractor": "^1.9.1",
     "zod": "^4.1.12"
