--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@electric-sql/react": "^1.0.18",
     "@hookform/resolvers": "^5.2.2",
     "@mastra/client-js": "^0.16.9",
+    "@repo/shared-types": "*",
     "@repo/ui": "*",
     "@t3-oss/env-nextjs": "^0.13.8",
     "next": "^16.0.0",
@@ -34,7 +35,6 @@
     "@types/react": "19.2.0",
     "@types/react-dom": "19.2.0",
     "babel-plugin-react-compiler": "^1.0.0",
-    "eslint": "^9.38.0",
     "typescript": "5.9.2"
   }
 }
