--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,7 +7,8 @@
       }
     ],
     "paths": {
-      "#*": ["./src/*"]
+      "#*": ["./src/*"],
+      "@repo/shared-types/*": ["../../packages/shared-types/src/*"]
     }
   },
   "include": [
@@ -17,5 +18,10 @@
     "next.config.ts",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "references": [
+    {
+      "path": "../../packages/shared-types"
+    }
+  ]
 }
