--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,15 +18,15 @@
     "@electric-sql/react": "^1.0.18",
     "@hookform/resolvers": "^5.2.2",
     "@mastra/client-js": "^0.16.9",
+    "@repo/envs": "*",
     "@repo/shared-types": "*",
     "@repo/ui": "*",
-    "@t3-oss/env-nextjs": "^0.13.8",
     "next": "^16.0.0",
     "nuqs": "^2.7.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
