--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,22 +9,22 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/node": "^24.10.0",
-    "mastra": "^0.18.0"
+    "@types/node": "^24.10.9",
+    "mastra": "^1.0.1"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@mastra/core": "^0.24.0",
-    "@mastra/loggers": "^0.10.19",
-    "@mastra/memory": "^0.15.11",
-    "@mastra/pg": "^0.17.8",
+    "@mastra/core": "^1.0.4",
+    "@mastra/loggers": "^1.0.0",
+    "@mastra/memory": "^1.0.0",
+    "@mastra/pg": "^1.0.0",
     "@repo/shared-types": "*",
-    "@toon-format/toon": "^0.8.0",
-    "ollama-ai-provider-v2": "^1.5.2",
+    "@toon-format/toon": "^2.1.0",
+    "ollama-ai-provider-v2": "^3.0.1",
     "youtube-caption-extractor": "^1.9.1",
-    "zod": "^4.1.13"
+    "zod": "4.1.13"
   },
   "packageManager": "bun@1.3.1"
 }
