--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,24 +17,24 @@
   "dependencies": {
     "@electric-sql/react": "^1.0.18",
     "@hookform/resolvers": "^5.2.2",
-    "@mastra/client-js": "^0.16.9",
+    "@mastra/client-js": "^1.0.1",
     "@repo/envs": "*",
     "@repo/shared-types": "*",
     "@repo/ui": "*",
-    "next": "^16.0.0",
-    "nuqs": "^2.7.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-hook-form": "^7.66.0",
-    "zod": "^4.1.13"
+    "next": "^16.1.4",
+    "nuqs": "^2.8.6",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-hook-form": "^7.71.1",
+    "zod": "4.1.13"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
     "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^24.10.0",
+    "@types/node": "^24.10.9",
     "@types/react": "19.2.0",
     "@types/react-dom": "19.2.0",
     "babel-plugin-react-compiler": "^1.0.0",
-    "typescript": "5.9.2"
+    "typescript": "5.9.3"
   }
 }
