--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -15,11 +15,11 @@
     "format-and-lint:fix": "biome check . --write"
   },
   "dependencies": {
-    "zod": "^4.1.13"
+    "zod": "4.1.13"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
-    "@types/node": "^24.10.0",
-    "typescript": "5.9.2"
+    "@types/node": "^24.10.9",
+    "typescript": "5.9.3"
   }
 }
