--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,8 +16,10 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@browserbasehq/stagehand": "^3.0.8",
     "@mastra/core": "^1.0.4",
     "@mastra/loggers": "^1.0.0",
+    "@mastra/mcp": "^1.0.0",
     "@mastra/memory": "^1.0.0",
     "@mastra/pg": "^1.0.0",
     "@repo/shared-types": "*",
