feat: add externals configuration to bundler and update tsconfig paths for mastra

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -8,6 +8,7 @@
     ],
     "paths": {
       "#*": ["./src/*"],
+      "#mastra/*": ["../../packages/shared-types/src/mastra/*"],
       "@repo/shared-types/*": ["../../packages/shared-types/src/*"]
     }
   },
