refactor: move components to feat folder

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,6 +6,7 @@
         "name": "next"
       }
     ],
+    "skipLibCheck": true,
     "paths": {
       "#*": ["./src/*"],
       "#mastra/*": ["../../packages/shared-types/src/mastra/*"],
@@ -13,13 +14,13 @@
     }
   },
   "include": [
-    "**/*.ts",
-    "**/*.tsx",
+    "src/**/*.ts",
+    "src/**/*.tsx",
     "next-env.d.ts",
     "next.config.ts",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", ".next", "../../node_modules"],
   "references": [
     {
       "path": "../../packages/shared-types"
