--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,9 +3,11 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "mastra dev",
-    "build": "mastra build"
+    "build": "mastra build",
+    "check-types": "tsc --noEmit",
+    "format-and-lint": "biome check .",
+    "format-and-lint:fix": "biome check . --write"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -22,11 +24,11 @@
     "@mastra/mcp": "^1.0.0",
     "@mastra/memory": "^1.0.0",
     "@mastra/pg": "^1.0.0",
+    "@repo/envs": "*",
     "@repo/shared-types": "*",
     "@toon-format/toon": "^2.1.0",
     "ollama-ai-provider-v2": "^3.0.1",
     "youtube-caption-extractor": "^1.9.1",
     "zod": "4.1.13"
-  },
-  "packageManager": "bun@1.3.1"
+  }
 }
