--- a/packages/envs/package.json
+++ b/packages/envs/package.json
@@ -7,6 +7,11 @@
     "./web": "./src/web.ts",
     "./node": "./src/node.ts"
   },
+  "scripts": {
+    "check-types": "tsc --noEmit",
+    "format-and-lint": "biome check .",
+    "format-and-lint:fix": "biome check . --write"
+  },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.13.8",
     "zod": "4.1.13"
