--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "format-and-lint:fix": "biome check . --write",
     "syncpackages": "sherif",
     "lefthook-sync": "lefthook install",
-    "patch-deps": "node scripts/patch-deps.js",
-    "postinstall": "lefthook install && node scripts/patch-deps.js"
+    "postinstall": "lefthook install"
   },
   "trustedDependencies": [
     "lefthook"
