--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,9 +18,11 @@
     "@electric-sql/react": "^1.0.30",
     "@hookform/resolvers": "^5.2.2",
     "@mastra/client-js": "^1.1.0",
+    "@repo/db": "*",
     "@repo/envs": "*",
     "@repo/shared-types": "*",
     "@repo/ui": "*",
+    "better-auth": "^1.4.18",
     "next": "^16.1.4",
     "nuqs": "^2.8.8",
     "react": "^19.2.3",
