--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,11 +28,13 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-markdown": "^10.1.0",
     "zod": "4.1.13"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
     "@tailwindcss/postcss": "^4.1.17",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^24.10.9",
     "@types/react": "19.2.0",
     "@types/react-dom": "19.2.0",
