--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^24.10.9",
     "@types/react": "19.2.0",
     "@types/react-dom": "19.2.0",
