--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,6 +31,8 @@
     "@toon-format/toon": "^2.1.0",
     "googleapis": "^171.2.0",
     "ollama-ai-provider-v2": "^3.0.3",
+    "pino": "^10.3.1",
+    "pino-pretty": "^13.1.3",
     "youtube-caption-extractor": "^1.9.1",
     "zod": "4.1.13"
   }
