--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,6 +21,7 @@
     "@browserbasehq/stagehand": "^3.0.8",
     "@googleapis/youtube": "^31.0.0",
     "@mastra/core": "^1.4.0",
+    "@mastra/evals": "^1.1.1",
     "@mastra/loggers": "^1.0.1",
     "@mastra/mcp": "^1.0.1",
     "@mastra/memory": "^1.3.0",
