--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.1",
     "react-markdown": "^10.1.0",
-    "zod": "4.1.13"
+    "zod": "4.1.13",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
